<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.wiley.bsaranks.MainActivity">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/RankVerticalLayout">

                <ImageButton
                    style="@style/RankImageButton"
                    android:onClick="displayScout"
                    android:src="@drawable/img_01scout" />

                <TextView
                    style="@style/RankTextView"
                    android:text="@string/scout" />

            </LinearLayout>

            <LinearLayout
                style="@style/RankVerticalLayout">

                <ImageButton
                    style="@style/RankImageButton"
                    android:onClick="displayTenderfoot"
                    android:src="@drawable/img_02tenderfoot" />

                <TextView
                    style="@style/RankTextView"
                    android:text="@string/tenderfoot" />

            </LinearLayout>

            <LinearLayout
                style="@style/RankVerticalLayout">

                <ImageButton
                    style="@style/RankImageButton"
                    android:onClick="displaySecondClass"
                    android:src="@drawable/img_03secondclass" />

                <TextView
                    style="@style/RankTextView"
                    android:text="@string/secondclass" />

            </LinearLayout>

            <LinearLayout
                style="@style/RankVerticalLayout">

                <ImageButton
                    style="@style/RankImageButton"
                    android:onClick="displayFirstClass"
                    android:src="@drawable/img_04firstclass" />

                <TextView
                    style="@style/RankTextView"
                    android:text="@string/firstclass" />

            </LinearLayout>

            <LinearLayout
                style="@style/RankVerticalLayout">

                <ImageButton
                    style="@style/RankImageButton"
                    android:onClick="displayStarScout"
                    android:src="@drawable/img_05star"/>

                <TextView
                    style="@style/RankTextView"
                    android:text="@string/starscout" />

            </LinearLayout>

            <LinearLayout
                style="@style/RankVerticalLayout">

                <ImageButton
                    style="@style/RankImageButton"
                    android:onClick="displayLifeScout"
                    android:src="@drawable/img_06life" />

                <TextView
                    style="@style/RankTextView"
                    android:text="@string/lifescout" />

            </LinearLayout>

            <LinearLayout
                style="@style/RankVerticalLayout">

                <ImageButton
                    style="@style/RankImageButton"
                    android:onClick="displayEagleScout"
                    android:src="@drawable/img_07eagle" />

                <TextView
                    style="@style/RankTextView"
                    android:text="@string/eaglescout" />

            </LinearLayout>

        </LinearLayout>

    </HorizontalScrollView>

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/rank_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:text="@string/default_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/rank_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/default_desc" />

    </ScrollView>

</LinearLayout>
